--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-
+<html>
+<head></head>
+<body>
+<script type="text/javascript">
+//<![CDATA[
+    document.write("<pre>", location.href, "</pre>");
+//]]>
+</script>
+</body>
+</html>
