--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
         if (str.length == 0) { return ""; }
         return str.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&#34;").replace(/'/g, "&#39;");
     }
-    document.write("<pre>", encodeHTML(location.href.replace(/[^:]*:\/\/[^\/]*/,"")), "</pre>");
+    document.write("<pre>", encodeHTML(location.href.replace(/[^:]*:\/\/[^\/]*\//,"")), "</pre>");
 //]]>
 </script>
 </body>
